--- a/www/recorrido.html
+++ b/www/recorrido.html
@@ -6,7 +6,8 @@
     <title>Recorrido 2014</title>
     <meta http-equiv="keywords" content="free mobile website templates, free mobile website template, free iphone template, free android template, free high end touch mobile templates, free high end touch mobile template" />
     <meta http-equiv="description" content="Get free mobile website templates for Iphone , Android and High end touch mobile devices" />
-    <link href="css/style.css"rel="stylesheet" type="text/css" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=2">
+	<link href="css/style.css"rel="stylesheet" type="text/css" />
 </head>
 
 <body>
@@ -29,7 +30,9 @@
     </div>
     <div class="clear"></div>
    
-	<iframe src="https://mapsengine.google.com/map/embed?mid=ztbKL2p7bmyM.kfYoPRbewKS0" width="640" height="480"></iframe>
+	<!--<iframe src="https://mapsengine.google.com/map/embed?mid=ztbKL2p7bmyM.kfYoPRbewKS0" width="640" height="480"></iframe>-->
+	<img src="images/recorrido.png">
+    
     <div class="nav2">
 			<p>Diseñado por <a href="http://">Gobierno Autonomo Municipal de Quillacollo</a></p>
         </div>
