html5, mapa de google
todo el html se cambio y el mapa q se incluye es mas pequeño

--- a/www/gastronomia.html
+++ b/www/gastronomia.html
@@ -10,23 +10,24 @@
 </head>
 
 <body>
-	<div id="header">
-<ul id="nav">
-	<li><a href="index.html">Inicio</a></li>
-	<li><a href="recorrido.html">Recorrido</a>
-	<li><a href="ubicacion.html">Ubicacion</a>
-	<li><a href="">Informacion</a>
-		<ul>
-			<li><a href="info.html">Emergencias</a></li>
-			<li><a href="hoteleria.html">Hoteleria</a></li>
-			<li><a href="gastronomia.html">Gastronomia</a></li>
-		</ul>
-	</li>
-			
-</ul>
+	<header>
+			<nav>
+				<li><a href="index.html">Inicio</a></li>
+				<li><a href="recorrido.html">Recorrido</a>
+				<li><a href="ubicacion.html">Ubicacion</a>
+				<li><a href="">Informacion</a>
+					<ul>
+						<li><a href="info.html">Emergencias</a></li>
+						<li><a href="hoteleria.html">Hoteleria</a></li>
+						<li><a href="gastronomia.html">Gastronomia</a></li>
+					</ul>
+				</li>
+					
+			</nav>
+   
        
     	<div class="logo"><a href="index.html"><img src="images/logoAlcaldiaQuillacollo.png" alt="Gobierno Autonomo Municipal de Quillacollo" /></a><span class="title" >Restaurantes</span></div>
-    </div>
+    </header>
 	<div class="screenInfo">
 	<h1 class="page-title">Chop Restaurant “Pablos”  : <span>4362935</span> </h1>
     <h1 class="page-subtitle"> Tomas Bata 1 cuadra antes de la línea Férrea <span></span> </h1>
@@ -69,8 +70,8 @@
 <h1 class="page-title">Restaurant “Sumajta Mikuna” : <span>     79757552</span> </h1>
 <h1 class="page-subtitle">  Av. Blanco Galindo Km 11 </h1>
    </div>
-	<div class="nav2">
+	 <footer>
 			<p>Diseñado por <a href="http://">Gobierno Autonomo Municipal de Quillacollo</a></p>
-        </div>
+    </footer>
 </body>
 </html>
