--- a/www/hoteleria.html
+++ b/www/hoteleria.html
@@ -10,23 +10,24 @@
 </head>
 
 <body>
-	<div id="header">
-		<ul id="nav">
-	<li><a href="index.html">Inicio</a></li>
-	<li><a href="recorrido.html">Recorrido</a>
-	<li><a href="ubicacion.html">Ubicacion</a>
-	<li><a href="">Informacion</a>
-		<ul>
-			<li><a href="info.html">Emergencias</a></li>
-			<li><a href="hoteleria.html">Hoteleria</a></li>
-			<li><a href="gastronomia.html">Gastronomia</a></li>
-		</ul>
-	</li>
-			
-</ul>
+	<header>
+			<nav>
+				<li><a href="index.html">Inicio</a></li>
+				<li><a href="recorrido.html">Recorrido</a>
+				<li><a href="ubicacion.html">Ubicacion</a>
+				<li><a href="">Informacion</a>
+					<ul>
+						<li><a href="info.html">Emergencias</a></li>
+						<li><a href="hoteleria.html">Hoteleria</a></li>
+						<li><a href="gastronomia.html">Gastronomia</a></li>
+					</ul>
+				</li>
+					
+			</nav>
+   
        
-    	<div class="logo"><a href="index.html"><img src="images/logoAlcaldiaQuillacollo.png" alt="Gobierno Autonomo Municipal de Quillacollo" /></a><span class="title" >Hoteles y Alojamiento</span></div>
-    </div>
+    	<div class="logo"><a href="index.html"><img src="images/logoAlcaldiaQuillacollo.png" alt="Gobierno Autonomo Municipal de Quillacollo" /></a><span class="title" >Hoteles y Alojamientos</span></div>
+    </header>
 	<div class="screenInfo">
 	<h1 class="page-title">Alojamiento “Los Angeles”  : <span>4366926</span> </h1>
     <h1 class="page-subtitle"> Av. Blanco Galindo <span></span> </h1>
@@ -115,8 +116,8 @@
 	
 	
    
-	<div class="nav2">
+	 <footer>
 			<p>Diseñado por <a href="http://">Gobierno Autonomo Municipal de Quillacollo</a></p>
-        </div>
+    </footer>
 </body>
 </html>
