--- a/www/ubicacion.html
+++ b/www/ubicacion.html
@@ -28,29 +28,31 @@ google.maps.event.addDomListener(window, 'load', initialize);
 	</head>
 
 <body conload="initialize()">
-	<div id="header">
-		<ul id="nav">
-	<li><a href="index.html">Inicio</a></li>
-	<li><a href="recorrido.html">Recorrido</a>
-	<li><a href="ubicacion.html">Ubicacion</a>
-	<li><a href="">Informacion</a>
-		<ul>
-			<li><a href="info.html">Emergencias</a></li>
-			<li><a href="hoteleria.html">Hoteleria</a></li>
-			<li><a href="gastronomia.html">Gastronomia</a></li>
-		</ul>
-		</li>
-			
-	</ul>
+	<header>
+			<nav>
+				<li><a href="index.html">Inicio</a></li>
+				<li><a href="recorrido.html">Recorrido</a>
+				<li><a href="ubicacion.html">Ubicacion</a>
+				<li><a href="">Informacion</a>
+					<ul>
+						<li><a href="info.html">Emergencias</a></li>
+						<li><a href="hoteleria.html">Hoteleria</a></li>
+						<li><a href="gastronomia.html">Gastronomia</a></li>
+					</ul>
+				</li>
+					
+			</nav>
+   
        
-    	<div class="logo"><a href="index.html"><img src="images/logoAlcaldiaQuillacollo.png" alt="Gobierno Autonomo Municipal de Quillacollo" /></a><span class="title" >Usted esta aqui</span></div>
-    </div>
+    	<div class="logo"><a href="index.html"><img src="images/logoAlcaldiaQuillacollo.png" alt="Gobierno Autonomo Municipal de Quillacollo" /></a><span class="title" >Usted esta Aqui</span></div>
+    </header>
     <div class="clear"></div>
-    <div data-role="page" id="paginaMapa" data-url="map-page">
-		<div id="map-canvas" width="600" height="800"></div>
+	<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d7614.735010273522!2d-66.27854354899004!3d-17.39414227729066!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sbo!4v1407715166526" width="400" height="300" frameborder="0" style="border:0"></iframe>
+    <!--<div data-role="page" id="paginaMapa" data-url="map-page">
+		<div id="map-canvas" width="600" height="800"></div>-->
 	</div>
-    <div class="nav2">
+     <footer>
 			<p>Diseñado por <a href="http://">Gobierno Autonomo Municipal de Quillacollo</a></p>
-        </div>
+    </footer>
 </body>
 </html>
